2022-12-21_thermofisher_kubernetes_tanzu_okd_rke/prom/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-example
  labels:
    app: metrics-example
  annotations:
    kubernetes.io/change-cause: ver1
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: metrics-example
  replicas: 5
  template:
    metadata:
      labels:
        app: metrics-example
    spec:
      containers:
        - name: metrics-example
          image: ondrejsika/metrics-example-8000
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 3000
            # fsGroup: 2000
            seccompProfile:
              type: RuntimeDefault


---
apiVersion: v1
kind: Service
metadata:
  name: metrics-example
  labels:
    app: metrics-example
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: metrics-example
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - secretName: cert
      hosts:
        - metrics-example.apps.okd92.aws0.sikademo.com
  rules:
    - host: metrics-example.apps.okd92.aws0.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metrics-example
                port:
                  number: 80
